sources/fred-vaughan-cc/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: fred-vaughan-cc
  labels:
    app: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
